<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Activities.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/logo_margin_bottom"
            android:background="@mipmap/ic_nothing" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:background="@drawable/edit_text_selector"
            android:ems="13"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:background="@drawable/edit_text_selector"
            android:ems="13"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:background="@drawable/edit_text_selector"
            android:ems="13"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:layout_marginTop="@dimen/phone_margin_top"
            android:background="@drawable/edit_text_selector"
            android:ems="13"
            android:digits="0123456789+"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:background="@drawable/edit_text_selector"
            android:ems="13"
            android:inputType="date"
            android:focusable="false"
            android:hint="Дата рождения" />

        <Button
            android:id="@+id/registration"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration" />
    </LinearLayout>
</ScrollView>